--- a/pi-setup/home-interface-kiosk.service
+++ b/pi-setup/home-interface-kiosk.service
@@ -5,11 +5,11 @@ Wants=network-online.target
 
 [Service]
 Type=simple
-User=pi
+User=jordankeyser
 Environment=DISPLAY=:0
-Environment=XAUTHORITY=/home/pi/.Xauthority
-WorkingDirectory=/home/pi/home-interface
-ExecStart=/home/pi/home-interface/pi-setup/kiosk-start.sh
+Environment=XAUTHORITY=/home/jordankeyser/.Xauthority
+WorkingDirectory=/home/jordankeyser/Desktop/home-interface
+ExecStart=/home/jordankeyser/Desktop/home-interface/pi-setup/kiosk-start.sh
 Restart=always
 RestartSec=10
 
